# item_storing

./: .gitignore  README.md  pyproject.toml
upload_entries/: app.py
upload_entries/templates/: upload.html
